align passing lang for categories