@@ -86,18 +86,7 @@ public class CategoryFacadeImpl implements CategoryFacade {
 
         List<ReadableCategory> filteredList = new ArrayList<>(readableCategoryMap.values());
 
-        // execute only if not admin filtered
-        if (filter == null || !filter.contains(ADMIN_CATEGORY)) {
-            filteredList =
-                    readableCategoryMap.values().stream()
-                            .filter(cat -> cat.getDepth() == 0)
-                            .sorted(Comparator.comparing(ReadableCategory::getSortOrder))
-                            .collect(Collectors.toList());
-
-            returnList.setSize(filteredList.size());
-        }
-
-        returnList.setContent(filteredList);
+        returnList.setContent(filteredList.stream().filter(it -> it.getDepth() == 0).toList());
 
         return returnList;
     }
@@ -112,39 +101,23 @@ public class CategoryFacadeImpl implements CategoryFacade {
             Pageable pageable) {
         List<Category> categories;
         ReadableCategoryList returnList = new ReadableCategoryList();
-        if (!CollectionUtils.isEmpty(filter) && filter.contains(FEATURED_CATEGORY)) {
-            categories = categoryService.getListByDepthFilterByFeatured(store, depth, language);
-            returnList.setTotalElements(categories.size());
-            returnList.setSize(categories.size());
-            returnList.setTotalPages(1);
-        } else {
-            org.springframework.data.domain.Page<Category> page =
-                    categoryService.getListByDepth(
-                            store,
-                            language,
-                            criteria != null ? criteria.getName() : null,
-                            depth,
-                            pageable);
-            categories = page.getContent();
-            returnList.setTotalElements(page.getTotalElements());
-            returnList.setTotalPages(page.getTotalPages());
-            returnList.setSize(categories.size());
-        }
+        org.springframework.data.domain.Page<Category> page =
+                categoryService.getListByDepth(
+                        store,
+                        language,
+                        criteria != null ? criteria.getName() : null,
+                        depth,
+                        pageable);
+        categories = page.getContent();
+        returnList.setTotalElements(page.getTotalElements());
+        returnList.setTotalPages(page.getTotalPages());
+        returnList.setSize(categories.size());
 
-        if (filter != null && filter.contains(VISIBLE_CATEGORY)) {
-            List<ReadableCategory> categoryList =
-                    categories.stream()
-                            .filter(Category::isVisible)
-                            .map(cat -> readableCategoryMapper.convert(cat, store, language))
-                            .collect(Collectors.toList());
-            returnList.setContent(categoryList);
-        } else {
-            List<ReadableCategory> categoryList =
-                    categories.stream()
-                            .map(cat -> readableCategoryMapper.convert(cat, store, language))
-                            .collect(Collectors.toList());
-            returnList.setContent(categoryList);
-        }
+        List<ReadableCategory> categoryList =
+                categories.stream()
+                        .map(cat -> readableCategoryMapper.convert(cat, store, language))
+                        .collect(Collectors.toList());
+        returnList.setContent(categoryList);
         return returnList;
     }
 
@@ -242,52 +215,26 @@ public class CategoryFacadeImpl implements CategoryFacade {
 
     @Override
     public ReadableCategory getById(StoreMerchantId store, Long id, LanguageCode language) {
+        Category category = categoryService.getById(id, store);
+        ;
 
-        Category categoryModel;
-        if (language != null) {
-            categoryModel = getCategoryById(id, language);
-        } else { // all langs
-            categoryModel = getById(store, id);
-        }
+        if (category == null)
+            throw new ResourceNotFoundException("Category id [" + id + "] not found");
 
-        if (categoryModel == null)
-            throw new ResourceNotFoundException("Categori id [" + id + "] not found");
-
-        String lineage = categoryModel.getLineage();
+        String lineage = category.getLineage();
 
         ReadableCategory readableCategory =
-                readableCategoryMapper.convert(categoryModel, store, language);
+                readableCategoryMapper.convert(category, store, language);
 
-        // get children
-        List<Category> children = getListByLineage(store, lineage);
-
-        List<ReadableCategory> childrenCats =
-                children.stream()
-                        .map(cat -> readableCategoryMapper.convert(cat, store, language))
-                        .collect(Collectors.toList());
-
-        addChildToParent(readableCategory, childrenCats);
+        var children =
+                getListByLineage(store, lineage).stream()
+                        .map(
+                                cat ->
+                                        readableCategoryMapper.convert(
+                                                cat, store, LanguageCode.nonLanguage()))
+                        .toList();
+        readableCategory.setChildren(children);
         return readableCategory;
-    }
-
-    private void addChildToParent(
-            ReadableCategory readableCategory, List<ReadableCategory> childrenCats) {
-        Map<Long, ReadableCategory> categoryMap =
-                childrenCats.stream()
-                        .collect(Collectors.toMap(ReadableCategory::getId, Function.identity()));
-        categoryMap.put(readableCategory.getId(), readableCategory);
-
-        // traverse map and add child to parent
-        for (ReadableCategory readable : childrenCats) {
-
-            if (readable.getParent() != null) {
-
-                ReadableCategory rc = categoryMap.get(readable.getParent().getId());
-                if (rc != null) {
-                    rc.getChildren().add(readable);
-                }
-            }
-        }
     }
 
     private List<Category> getListByLineage(StoreMerchantId store, String lineage) {
@@ -297,12 +244,6 @@ public class CategoryFacadeImpl implements CategoryFacade {
             throw new ServiceRuntimeException(
                     String.format("Error while getting root category %s", e.getMessage()), e);
         }
-    }
-
-    private Category getCategoryById(Long id, LanguageCode language) {
-        return Optional.ofNullable(categoryService.getOneByLanguage(id, language))
-                .orElseThrow(
-                        () -> new ResourceNotFoundException("Category id [" + id + "] not found"));
     }
 
     private void deleteCategory(Category category) {
